[package]
name = "overbot-tank"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
tokio = { version = "1.9.0", features = ["full"] }
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "offline"] }
serenity = { version = "0.10.8", features = [] }
chrono = "0.4.19"
image = "0.23.14"
plotters-backend = "0.3.2"
plotters = "0.3.1"
rand = "0.8.4"
